_sass/lord-stanley/_layout.scss
.site-header {
    border-top: 5px solid $border-color-03;
    border-bottom: 1px solid $border-color-01;
    min-height: $spacing-unit * 1.865;
    line-height: $base-line-height * $base-font-size * 2.25;
    position: relative;
}

.site-title {
    @include relative-font-size(1.625);
    font-weight: 700;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    @include media-query(on-palm) {
	padding-right: 45px;
    }

    &, &:visited {
	color: $site-title-color;
    }
}

.site-nav {
    position: absolute;
    top: 9px;
    right: $spacing-unit * .6;
    background-color: $background-color;
    border: 1px solid $border-color-01;
    border-radius: 6px;
    text-align: right;

    .nav-trigger {
	display: none;
    }

    .menu-icon {
	float: right;
	width: 36px;
	height: 26px;
	line-height: 0;
	padding-top: 10px;
	text-align: center;

	> svg path {
	    fill: $border-color-03;
	}
    }

    label[for="nav-trigger"] {
	display: block;
	float: right;
	width: 36px;
	height: 36px;
	z-index: 2;
	cursor: pointer;
    }

    input ~ .trigger {
	clear: both;
	display: none;
    }

    input:checked ~ .trigger {
	display: block;
	padding-bottom: 5px;
    }

    .page-link {
	color: $text-color;
	line-height: $base-line-height;
	display: block;
	padding: 5px 10 px;

	&:not(:last-child) {
	    margin-right: 0;
	}
	margin-left: 20px;
    }

    @media screen and (min-width: $on-medium) {
	position: static;
	float: right;
	border: none;
	background-color: inherit;

	label[for="nav-trigger"] {
	    display: none;
	}

	.menu-icon {
	    display: none;
	}

	input ~ .trigger {
	    display: block;
	}

	.page-link {
	    display: inline;
	    padding: 0;

	    &:not(:last-child) {
		margin-right: 20px;
	    }
	    margin-left: auto;
	}
    }
}

.site-footer {
    border-top: 1px solid $border-color-01;
    padding: $spacing-unit 0;
}

.footer-heading {
    @include relative-font-size(1.125);
    margin-bottom: $spacing-unit * .5;
}

.feed-subscribe .svg-icon {
    padding: 5px 5px 2px 0;
}

.contact-list, .social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper, .social-links {
    @include relative-font-size(0.9375);
    color: $brand-color;
}

.footer-col {
    margin-bottom: $spacing-unit * .5;
}

.footer-col-1, .footer-col-2 {
    width: calc(50% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: calc(100% - (#{$spacing-unit} / 2));
}

@media screen and (min-width: $on-large) {
    .footer-col-1 {
	width: calc(35% - (#{$spacing-unit} / 2));
    }

    .footer-col-2 {
        width: calc(20% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: calc(45% - (#{$spacing-unit} / 2));
    }
}

@media screen and (min-width: $on-medium) {
    .footer-col-wrapper {
	display: flex;
    }

    .footer-col {
	width: calc(100% - (#{$spacing-unit} / 2));
	padding: 0 ($spacing-unit * .5);

	&:first-child {
	    padding-right: $spacing-unit * .5;
	    padding-left: 0;
	}

	&:last-child {
	    padding-right: 0;
	    padding-left: $spacing-unit * .5;
	}
    }
}

.page-content {
    padding: $spacing-unit 0;
    flex: 1 0 auto;
}

.page-heading {
    @include relative-font-size(2);
}

.post-list-heading {
    @include relative-font-size(1.75);
}

.post-list {
    margin-left: 0;
    list-style: none;
	text-align: justify;
	text-justify: inter-word;

    > li {
	margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $brand-color;
}

.post-link {
    display: block;
    @include relative-font-size(1.5);
}

.post-header {
    margin-bottom: $spacing-unit;
}

.post-title, .post-content h1 {
    @include relative-font-size(2.625);
    letter-spacing: -1px;
    line-height: 1.15;
    color: var(--link-color);

    @media screen and (min-width: $on-large) {
	@include relative-font-size(2.625);
    }
}

.post-content {
    margin-bottom: $spacing-unit;
	text-align: justify;
	text-justify: inter-word;

    h1, h2, h3, h4, h5, h6 {
	margin-top: $spacing-unit;
    }

    h2 {
	@include relative-font-size(1.75);

	@media screen and (min-width: $on-large) {
	    @include relative-font-size(2);
	}
    }

    h3 {
	@include relative-font-size(1.375);

	@media screen and (min-width: $on-large) {
	    @include relative-font-size(1.625);
	}
    }

    h4 {
	@include relative-font-size(1.25);
    }

    h5 {
	@include relative-font-size(1.125);
    }

    h6 {
	@include relative-font-size(1.0625);
    }
}

.social-media-list {
    display: table;
    margin: 0 auto;
    li {
	float: left;
	margin: 1px 1px 1px 0;
	&:last-of-type { margin-right: 0 }
	a {
	    display: block;
	    padding: 2px 3px;
	}
    }
}

.pagination {
    margin-bottom: $spacing-unit;
    @extend .social-media-list;
    li {
	a, div {
	    min-width: 41px;
	    text-align: center;
	    box-sizing: border-box;
	}
	div {
	    display: block;
	    padding: $spacing-unit * .25;
	    border: 1px solid transparent;

	    &.pager-edge {
		color: $border-color-01;
		border: 1px dashed;
	    }
	}
    }
}

@media screen and (min-width: $on-large) {
    .one-half {
	width: calc(50% - (#{$spacing-unit} / 2));
    }
}

.not-found {
    text-align: center;
    padding: $spacing-unit * 2 0;

    h1 {
	@include relative-font-size(5);
	letter-spacing: -2px;
	line-height: 1;
	margin-bottom: $spacing-unit * .5;
    }
}

// Post body: content + sidebar side by side (below the post header)
.post-body-layout {
    display: flex;
    gap: $spacing-unit;
    align-items: flex-start;

    .post-content {
        flex: 1;
        min-width: 0;
    }

    .sidebar {
        @media screen and (max-width: 900px) {
            display: none;
        }
    }
}

// Two-column layout: main content + sidebar
.site-layout {
    display: flex;
    gap: $spacing-unit;
    align-items: flex-start;
}

.main-content {
    flex: 1;
    min-width: 0;
}

.sidebar {
    width: $sidebar-width;
    flex-shrink: 0;

    @media screen and (max-width: 900px) {
	display: none;
    }
}

// Sidebar widgets
.sidebar-widget {
    margin-bottom: $spacing-unit;
    padding: $spacing-unit * .5;
    border: 1px solid $border-color-01;
    border-radius: 4px;
}

.sidebar-widget-title {
    @include relative-font-size(0.9375);
    font-weight: 700;
    margin-bottom: $spacing-unit * .33;
    padding-bottom: $spacing-unit * .25;
    border-bottom: 1px solid $border-color-01;
}

// Recent posts widget
.sidebar-recent-posts-list {
    list-style: none;
    margin-left: 0;

    li {
	margin-bottom: $spacing-unit * .33;
    }

    a {
	font-size: $small-font-size;
	display: block;
    }

    .post-meta {
	display: block;
	font-size: $small-font-size * 0.9;
    }
}

// Calendar widget
.cal-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 6px;

    button {
	background: none;
	border: none;
	cursor: pointer;
	color: var(--link-color);
	font-size: 1.25rem;
	line-height: 1;
	padding: 0 4px;

	&:hover {
	    color: var(--brand-color);
	}
    }
}

.cal-month-title {
    font-size: $small-font-size;
    font-weight: 700;
}

.cal-table {
    width: 100%;
    border-collapse: collapse;
    border: none;
    margin-bottom: 0;

    th, td {
	text-align: center;
	padding: 2px 1px;
	border: none;
	background-color: transparent;
	font-size: 0.75rem;
    }

    th {
	color: $brand-color;
    }

    tr:nth-child(even) {
	background-color: transparent;
    }

    td a {
	display: block;
	font-weight: 700;
    }
}

